fix subhead spacing

--- a/stylesheets/partials/features/_features.scss
+++ b/stylesheets/partials/features/_features.scss
@@ -57,8 +57,7 @@
 	.feature-wrapper {
 		
 		.feature {
-			display: flex; 
-			align-items: center;
+			display: flex;
 
 			.feature-image-wrapper {
 				display: flex;
@@ -78,7 +77,7 @@
 
 			p:first-of-type {
 				margin-top: 0;
-				margin-bottom: 2em;
+				margin-bottom: 1em;
 			}
 
 			hr {
